fixed github login
github login works now